Fix EZP-21372: Implement the EditPreview Visible preview modes selection on action bar. Misc fixes.

--- a/Resources/public/css/editactionbar.css
+++ b/Resources/public/css/editactionbar.css
@@ -27,22 +27,11 @@
     margin-top: -5px;
 }
 
-.ez-view-editactionbar .actions-list .action-hint{
-    font-size: 12px;
-}
-
 .ez-view-editactionbar .actions-list .action-widget .action-button{
     float: left;
-    background: #242328;
-    color: white;
-    font-size: 16px;
     padding: 8px;
     margin-right: 5px;
     margin-top: 10px;
-}
-
-.ez-view-editactionbar .actions-list .action-widget .action-button:hover{
-    background: #486235;
 }
 
 .ez-view-editactionbar .actions-list .view-more {
