--- a/Resources/public/css/editpreview.css
+++ b/Resources/public/css/editpreview.css
@@ -13,6 +13,7 @@
 
 .ez-preview-content .ez-preview-hide {
     display: block;
+    cursor: pointer;
     float: right;
     font-weight: bold;
     font-size: 90%;
